Istio/Gateway/Ingress/Gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway-graphql
  namespace: dev
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - andromeda.home.com
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: andromeda-credential
      hosts:
        - andromeda.home.com
